JBIDE-13425 work to centralize default arguments