@@ -47,30 +47,12 @@ public class LocalJBoss7ServerRuntime extends LocalJBossServerRuntime implements
 
 	@Override
 	public String getDefaultRunArgs(IPath serverHome) {
-		return DASH + JB7_MP_ARG + SPACE + QUOTE 
-				+ serverHome.append(MODULES).toString() + QUOTE 
-				+ SPACE + DASH + JB7_LOGMODULE_ARG + SPACE + JB7_LOGMODULE_DEFAULT
-				+ SPACE + DASH + JB7_JAXPMODULE + SPACE + JB7_JAXP_PROVIDER
-				+ SPACE + JB7_STANDALONE_ARG;
+		return getExtendedProperties().getDefaultLaunchArguments().getStartDefaultProgramArgs();
 	}
 		
 	@Override
 	public String getDefaultRunVMArgs(IPath serverHome) {
-		IJBossRuntimeResourceConstants c = new IJBossRuntimeResourceConstants() {};
-		IPath bootLog = serverHome.append(c.AS7_STANDALONE).append(c.FOLDER_LOG).append(c.AS7_BOOT_LOG);
-		IPath logConfig = serverHome.append(c.AS7_STANDALONE).append(c.CONFIGURATION).append(c.LOGGING_PROPERTIES);
-		String serverArg =JavaUtils.supportsServerMode(getVM()) ? SERVER_ARG : "";  //$NON-NLS-1$
-		return  serverArg
-				+ " -Xms64m" //$NON-NLS-1$
-				+ " -Xmx512m" //$NON-NLS-1$
-				+ " -XX:MaxPermSize=256m" //$NON-NLS-1$
-				+ " -Djava.net.preferIPv4Stack=true" //$NON-NLS-1$
-				+ " -Dorg.jboss.resolver.warning=true"  //$NON-NLS-1$
-				+ " -Dsun.rmi.dgc.client.gcInterval=3600000" //$NON-NLS-1$
-				+ " -Dsun.rmi.dgc.server.gcInterval=3600000" //$NON-NLS-1$
-				+ SPACE + QUOTE + SYSPROP + JB7_BOOT_LOG_ARG + EQ + bootLog.toString() + QUOTE 
-				+ SPACE + QUOTE + SYSPROP + JB7_LOGGING_CONFIG_FILE + EQ + "file:" + logConfig.toString() + QUOTE //$NON-NLS-1$  
-				+ SPACE + QUOTE + SYSPROP + JBOSS_HOME_DIR + EQ + serverHome.toString() + QUOTE;
+		return getExtendedProperties().getDefaultLaunchArguments().getStartDefaultVMArgs();
 	}
 
 	@Override
